--- a/MongoMigrationWebApp/Pages/Index.razor
+++ b/MongoMigrationWebApp/Pages/Index.razor
@@ -241,7 +241,7 @@
         {
             if (!silent)
             {
-                _message = "Job details could not be loaded.Please use the backup for recovery.";
+                _message = "Unable to load job details at the moment. Please wait a while, and if the issue continues, you can recover the jobs from the backup.";
                 _messageDialogOpen = true;            
                 _jobLoadError = true;
             }
